--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/cors": "^2.8.17",
+        "@types/express": "^4.17.21",
         "@types/node": "^20.10.4",
         "@types/ws": "^8.5.10",
         "nodemon": "^3.0.2",
@@ -20,6 +22,8 @@
         "typescript": "^5.3.3"
     },
     "dependencies": {
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
         "ws": "^8.15.1"
     }
 }
