--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^4.18.2",
+        "reconnecting-websocket": "^4.4.0",
         "ws": "^8.15.1"
     }
 }
